apps/production/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: letsencrypt-prod
    konghq.com/preserve-host: "true"
    konghq.com/protocols: "https"
spec:
  ingressClassName: kong
  rules:
    - host: auth.dmgiangi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
  tls:
    - hosts:
        - auth.dmgiangi.dev
      secretName: keycloak-ingress-tls
